Atualizei as infos do desenvolvedor ✏️

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h2 class="section-title">SOBRE O DESENVOLVEDOR</h2>
         <div class="about-text">
             <p>NÃO APENAS CÓDIGO.</p>
-            <p>Sou uma pessoa interessada em tecnologia e programação, apaixonado em Storytelling e RPG desde criança, estudo música no tempo livre, e estou sempre buscando evoluir tanto tecnicamente quanto como pessoa. </p>
+            <p>Olá! Meu nome é Samuel Veronezi Callegaro e sou apaixonado em tecnologia e programação, extremamente interessado em Storytelling e RPG desde criança, estudo música no tempo livre, e estou sempre buscando evoluir tanto tecnicamente quanto como pessoa. </p>
             <p>Minha abordagem foca na integridade dos dados e na fluidez da experiência. Transformo requisitos brutos em sistemas elegantes e funcionais, eliminando o desnecessário e potencializando o essencial.</p>
         </div>
     </section>
